--- a/HandlerXML.ipynb
+++ b/HandlerXML.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><center> XML Tracing Handler <h2><center> "
+    "###                                                                  XML Tracing Handler "
    ]
   },
   {
