--- a/HandlerXML.ipynb
+++ b/HandlerXML.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 Tracing XML Handler"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###                                                                  XML Tracing Handler "
+    "<h2><center> XML Tracing Handler <\h2><\center>"
    ]
   },
   {
